--- a/yingshi/src/main/resources/templates/admin/index.html
+++ b/yingshi/src/main/resources/templates/admin/index.html
@@ -1,3 +1,8 @@
+
+
+
+
+
 <div class="page-title">
 
     <div class="title-env">
@@ -20,7 +25,7 @@
     </div>
 
 </div>
-<!-- Responsive Table -->
+<!-- Responsive Table
 <div class="row">
     <div class="col-md-12">
 
@@ -108,7 +113,7 @@
 
 </div>
 
-
+-->
 <script>
     $("input[name='checkall']").click(function(){
 //判断当前点击的复选框处于什么状态$(this).is(":checked") 返回的是布尔类型
@@ -239,3 +244,4 @@
 <div id="del">
 
 </div>
+
