--- a/yingshi/src/main/resources/templates/layout.html
+++ b/yingshi/src/main/resources/templates/layout.html
@@ -96,7 +96,7 @@
                     </a>
                     <ul>
 					<li >
-                        <a href="#" data-toggle="sidebar">
+                        <a href="/admin/home" >
                                 <span class="title">首&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;页</span>
                             </a>
                         </li>
